--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -120,12 +120,12 @@
     margin-left: 70px; }
     @media only screen and (max-width: 1000px) {
       .content .post-title {
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto; } }
+        width: 70%; } }
     @media only screen and (max-width: 600px) {
       .content .post-title {
-        width: 90%; } }
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto; } }
   .content .blog-posts {
     padding-top: 10%;
     padding-left: 15%; }
@@ -142,23 +142,23 @@
     border-top: 1px solid #c4c4c4; }
     @media only screen and (max-width: 1000px) {
       .content .share {
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto; } }
+        width: 70%; } }
     @media only screen and (max-width: 600px) {
       .content .share {
-        width: 90%; } }
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto; } }
   .content .post-content {
     width: 60%;
     margin-left: 70px; }
     @media only screen and (max-width: 1000px) {
       .content .post-content {
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto; } }
+        width: 70%; } }
     @media only screen and (max-width: 600px) {
       .content .post-content {
-        width: 90%; } }
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto; } }
   .content h1 {
     color: #111f33;
     font-weight: 900;
@@ -203,7 +203,11 @@
     padding: 10px; }
   .content img {
     padding: 3px;
-    max-width: 100%; }
+    max-width: 150%;
+    margin-left: -70px; }
+    @media only screen and (max-width: 1000px) {
+      .content img {
+        margin-left: -85px; } }
   .content li {
     margin-bottom: 10px;
     font-size: 1em;
@@ -272,12 +276,12 @@
       font-size: 0.9em; }
     @media only screen and (max-width: 1000px) {
       .content #related {
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto; } }
+        width: 70%; } }
     @media only screen and (max-width: 600px) {
       .content #related {
-        width: 90%; } }
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto; } }
   .content #related-posts {
     margin: 0;
     padding: 0;
