--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -200,11 +200,13 @@
       border-radius: 3px;
       padding: 2px 3px; }
   .content pre {
-    padding: 10px; }
+    padding: 15px 0;
+    overflow: scroll; }
   .content img {
     padding: 3px;
     max-width: 150%;
-    margin-left: -70px; }
+    margin-left: -70px;
+    width: 150%; }
     @media only screen and (max-width: 1000px) {
       .content img {
         margin-left: -80px; } }
