--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -1,6 +1,5 @@
 /* main.scss */
 
-$sidebar-background: white;
 $text-color: #505759;
 $hover-color: #FF1000;
 $link-color: #D90E00;
@@ -18,111 +17,29 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
   }
 }
 
-.sidebar { 
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: auto;
-  width: 30%;
+html, body {
+  height: 100%;
+}
+
+.header { 
   font-family: $font-family;
   text-align: center;
-  background: $sidebar-background;
-  z-index: 2;
-  
-  @include respond-to(medium-screens) {
-    height: 320px;
-    width: 100%;
-    z-index: 1;
-    position: absolute;
-  }
-
-  .sidebar-background {
-    background-image: url(/images/header.jpeg);
-    background-color: black;
-    position: relative;
-    height: 72%;
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-position-x: 55%;
-    @include respond-to(medium-screens) {
-      height: 100%;
-      background-size: 100% auto;
-      background-position-y: 85%;
-    }
-
-    @include respond-to(handhelds) {
-      background-size: 170% auto;
-
-    }
-  }
-
-  .sidebar-profile {
-    position: absolute;
-    bottom: -215px;
-    left: 15%;
-    right: 15%;
-    @include respond-to(medium-screens) {
-      width: 60%;
-      left: 20%;
-      right: 20%;
-      bottom: -200px;
-    }
-    @include respond-to(handhelds) {
-      width: 85%;
-      left: 8%;
-      right: 8%;
-    }
-  }
-
-  .sidebar-bio {
-    font-size: 0.9em;
-    margin-bottom: 15px;
-  }
-
-  .sidebar-avatar {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    display: inline-block;
+  height: 10%;
+  padding-top: 10%;
+  @include respond-to(handhelds) {
     margin: auto;
-      -webkit-border-radius: 100%;
-         -moz-border-radius: 100%;
-              border-radius: 100%;
-    border: 2px solid white;
-    .profile-photo {
-      height: 100%;
-      width: 100%;
-      -webkit-border-radius: 100%;
-         -moz-border-radius: 100%;
-              border-radius: 100%;
-    }
   }
-  .sidebar-name {
+
+  .name {
     font-family: $font-family;
-    font-size: 1.1em;
+    font-size: 1.777em;
     font-weight: bold;
-    margin: auto;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    a {
-      text-decoration: none;
-      color: $heading-color;
-    }
+    text-decoration: none;
+    color: $heading-color;
   }
-  .sidebar-social {
-    margin: auto;
-    a {
-      text-decoration: none;
-      font-size: 1.5em;
-      color: $byline-color;
-      &:hover {
-        color: $heading-color;
-      }
-    }
-  }
+
   
-  .sidebar-nav {
+  .nav {
     margin-left: auto;
     a {
       color: $heading-color;
@@ -145,68 +62,86 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
   } 
 }
 
+.footer {
+  height: 15%;
+  .hz-line {
+    background: $byline-color;
+    background: -webkit-gradient(linear,left top,right top,from(rgba(255,255,255,0)),color-stop(#ccc),to(rgba(255,255,255,0)));
+    background: -webkit-linear-gradient(left,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
+    background: linear-gradient(to right,rgba(255,255,255,0),#ccc,rgba(255,255,255,0));
+    height: 1px;
+    margin: 30px 0;
+  }
+  .social {
+    margin: auto;
+    width: 115px;
+    a {
+      text-decoration: none;
+      font-size: 1.5em;
+      color: $byline-color;
+      margin: 0 5px;
+      &:hover {
+        color: $heading-color;
+      }
+    }
+  }
+}
+
+.container {
+  width: 45%;
+  min-width: 650px;
+  margin: auto;
+  @include respond-to(medium-screens) {
+    width: 70%;
+    min-width: 100px;
+  }
+  @include respond-to(handhelds) {
+    width: 90%;
+    min-width: 100px;
+  }
+}
+
 .content {
   font-family: $font-family;
-  width: 70%;
-  float: right;
-  z-index: 1;
-  @include respond-to(medium-screens) {
-    width: 100%;
-    margin-top: 520px;
-    position: relative;
-    z-index: 0;
-  }
-  .post-title {
-    width: 60%;
-    margin-top: 100px;
-    margin-left: 70px;
-    @include respond-to(medium-screens) {
-      width: 70%;
-    }
-    @include respond-to(handhelds) {
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-  }
+  margin: auto;
 
   .blog-posts {
-    padding-top: 10%;
-    padding-left: 15%;
-    @include respond-to(medium-screens) {
-      padding: 5% 10%;
+    width: 45%;
+    min-width: 500px;
+    margin: auto;
+    @include respond-to(handhelds) {
+      width: 98%;
+      min-width: 250px;
     }
-
   }
+
+  
   .share {
     margin-top: 40px;
     margin-bottom: 10%;
-    margin-left: 70px;
     padding-top: 30px;
-    width: 60%;
     text-align: right;
     border-top: 1px solid $byline-color;
-    @include respond-to(medium-screens) {
-      width: 70%;
-    }
-    @include respond-to(handhelds) {
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
-    }
   }
-
-  .post-content {
-    width: 60%;
-    margin-left: 70px;
-    @include respond-to(medium-screens) {
-      width: 70%;
+  
+  .related-posts {
+    margin-top: 50px;
+    .listing li {
+      font-size: 0.9em;
+      padding: 0;
     }
-    @include respond-to(handhelds) {
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
+    ul {
+      margin: 5px 0 0 0;
+    }
+    .date {
+      font-size: 0.9em;
+    }
+    .related-posts-title {
+      margin: 0;
+      padding: 0;
+      font-weight: bold;
+      font-size: 1.333em;
+      color: $heading-color;
     }
   }
 
@@ -266,11 +201,11 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
   }
   img {
     padding: 3px;
-    max-width: 150%; 
-    margin-left: -70px;
-    width: 150%;
-    @include respond-to(medium-screens) {
-      margin-left: -80px;      
+    margin-left: -15%;
+    width: 130%;
+    @include respond-to(handhelds) {
+      margin-left: -7%;
+      width: 113%;
     }
   }
   li {
@@ -318,15 +253,15 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
     li {
       font-size: 1em;
       list-style: none;
-      padding: 2px 0 2px 0;
+      padding: 3px 0;
       margin: 0;
       color: $text-color;
-      font-weight: 550;
       line-height: 1.3em;
     }
     .date {
       font-size: 0.9em;
       color: $byline-color;
+      float: right;
     }
     .project-description {
       font-size: 0.9em;
@@ -341,44 +276,4 @@ $font-family: 'Source Sans Pro', Helvetica, sans-serif;
       }
     }
   }
-  #related {
-    margin-top: 50px;
-    width: 60%;
-    margin-left: 70px;
-    .listing li {
-      font-size: 0.9em;
-      padding: 0;
-    }
-    ul {
-      margin: 5px 0 0 0;
-    }
-    .date {
-      font-size: 0.9em;
-    }
-    @include respond-to(medium-screens) {
-      width: 70%;
-    }
-    @include respond-to(handhelds) {
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-  #related-posts {
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-    font-size: 1.333em;
-    color: $heading-color;
-  }
-  #galleria { 
-    width: 100%;
-  }
-  #blog-posts {
-    font-size: 1.777em;
-    font-weight: bold;
-    margin: 0;
-    color: $heading-color;
-  }
-  
 }
