--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <title>{{ page.title }}</title>
     <meta name="author" content="Maksim Stepanenko">
+    <meta name="description" content="Maksim's blog.">
     <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/css/main.css" />
