--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | Maksim Stepanenko</title>
     <meta name="author" content="Maksim Stepanenko">
-    <meta name="description" content="Maksim's blog.">
+    <meta name="description" content="Maksim Stepanenko's Blog">
     <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/css/main.css" />
