--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>Maksim Stepanenko | {{ page.title }}</title>
+    <title>{{ page.title }}</title>
     <meta name="author" content="Maksim Stepanenko">
     <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
