--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,12 @@
     <title>Maksim Stepanenko | {{ page.title }}</title>
     <meta name="author" content="Maksim Stepanenko">
     <meta name="google-site-verification" content="rovN7fHQfwPMfAkcEElrUcQVwE56onFM1EGKQSqq_rQ" />
-    <link href="http://feeds.feedburner.com/MaksimStepanenko" rel="alternate" title="Maksim Stepanenko" type="application/atom+xml" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/css/main.css" />
     </head>
   <body>
     <header class='header'>
-      <a class='name'>Maksim Stepanenko | {{ page.title }}</a>
+      <a class='name' href=''>Maksim Stepanenko | {{ page.title }}</a>
       <ul class="pages">
         <li class="page"><a href="/">Home</a></li>
         <li class="page"><a href="http://notes.maksim.ms">Notes</a></li>
