--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Maksim Stepanenko | {{ page.title }}</title>
     <meta name="author" content="Maksim Stepanenko">
-    <meta name="description" content="Maksim Stepanenko. I grew up in Kyrgyzstan, but moved to the US for college and eventually ended up in San Francisco. These days, I spend most of my time working on bitcoin stuff at Coinbase. Before that, I’ve worked at MIT Media Lab, Google, and Locu. My interests include physics, martial arts, photography, reading, drinking coffee, running, climbing and of course everything related to tech (current passions: bitcoin, ethereum, and other decentralized, blockchain-based, technologies).">
+    <meta name="description" content="Maksim Stepanenko. {{ page.description }}">
     <meta name="google-site-verification" content="rovN7fHQfwPMfAkcEElrUcQVwE56onFM1EGKQSqq_rQ" />
     <link rel="icon" type="image/png" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/stylesheets/css/main.css" />
@@ -17,7 +17,7 @@
       <a class='name' href=''>Maksim Stepanenko | {{ page.title }}</a>
       <ul class="pages">
         <li class="page"><a href="/">Home</a></li>
-        <li class="page"><a href="http://notes.maksim.ms">Notes</a></li>
+        <li class="page"><a href="/blog">Blog</a></li>
         <li class="page"><a href="http://photography.maksim.ms">Photography</a></li>
         <li class="page"><a href="/books">Books</a></li>
       </ul>
