--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <li class="page"><a href="/">Home</a></li>
         <li class="page"><a href="/blog">Blog</a></li>
         <li class="page"><a href="http://photography.maksim.ms">Photography</a></li>
-        <li class="page"><a href="/books">Books</a></li>
+        <li class="page"><a href="/books">Bookshelf</a></li>
       </ul>
     </header>
     <article class='content'>
